force-app/main/default/objects/EjecutivoContacto__c/EjecutivoContacto__c.object-meta.xml
<CustomObject>
    <label>Ejecutivo de Contacto</label>
    <nameField>
        <label>Nombre completo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ejecutivos de Contacto</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>