force-app/main/default/objects/EjecutivoContacto__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Área</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suscripción</fullName>
            </value>
            <value>
                <fullName>Siniestros</fullName>
            </value>
            <value>
                <fullName>Fianzas</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Operaciones</fullName>
            </value>
            <value>
                <fullName>Dirección</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>