force-app/main/default/objects/EjecutivoContacto__c/fields/Es_Contacto_Principal__c.field-meta.xml
<CustomField>
    <fullName>Es_Contacto_Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es contacto principal</label>
    <type>Checkbox</type>
</CustomField>