force-app/main/default/objects/EjecutivoContacto__c/fields/Institucion__c.field-meta.xml
<CustomField>
    <fullName>Institucion__c</fullName>
    <label>Institución</label>
    <referenceTo>Institucion__c</referenceTo>
    <relationshipLabel>Ejecutivos de Contacto</relationshipLabel>
    <relationshipName>Ejecutivos_de_Contacto</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>