force-app/main/default/objects/EjecutivoContacto__c/fields/Principal__c.field-meta.xml
<CustomField>
    <fullName>Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Principal</label>
    <type>Checkbox</type>
</CustomField>