force-app/main/default/objects/EjecutivoContacto__c/fields/Puesto__c.field-meta.xml
<CustomField>
    <fullName>Puesto__c</fullName>
    <label>Puesto</label>
    <length>120</length>
    <type>Text</type>
</CustomField>