force-app/main/default/objects/EjecutivoContacto__c/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <label>Teléfono directo</label>
    <type>Phone</type>
</CustomField>