force-app/main/default/objects/EjecutivoContacto__c/validationRules/Requiere_medio_de_contacto.validationRule-meta.xml
<ValidationRule>
    <fullName>Requiere_medio_de_contacto</fullName>
    <active>true</active>
    <description>El ejecutivo debe tener al menos un medio de contacto registrado: email, teléfono directo o celular.</description>
    <errorConditionFormula>AND(ISBLANK(Email__c), ISBLANK(Telefono__c), ISBLANK(Celular__c))</errorConditionFormula>
    <errorMessage>El ejecutivo debe tener al menos un medio de contacto: email, teléfono directo o celular.</errorMessage>
</ValidationRule>